@@ -1,3 +1,6 @@
+        * Removed strong::unique and strong::scoped. They are different
+          beasts that don't feel quite at home here. Thanks Adi Shavit.
+
 0.0.1 2017-09-30
 
         * First announcement
